Fixing overflow problem (no successful yet)

--- a/src/app/Components/chat/chat.component.scss
+++ b/src/app/Components/chat/chat.component.scss
@@ -6,13 +6,11 @@
         border: 0.1vw solid #660000 !important;
     }
     .msg-header-img{
-        max-width: 9vw !important;
-        max-height: 9vw !important;
-        margin-left: 0.5vh !important;
-        margin-right: 1vh !important;
+        width: 2.50vh;
+        height: 2.50vh;
     }
     .active h4{
-        font-size: 5vw !important;
+        font-size: 6vw !important;
     }
     .active h6{
         font-size: 2.5vw !important;
@@ -31,11 +29,9 @@
         margin-right: 2vh !important;
     }
     .received-msg-inbox p{
-        font-size: 2vw !important;
         padding: 1% 0 1% 1vh !important;
     }
     .time{
-        font-size: 1.75vw !important;
         padding: 0 0 0 1.5vh !important;
     }
     .outgoing-chats{
@@ -43,31 +39,30 @@
         margin-bottom: 5vw !important;
     }
     .outgoing-chats-msg p{
-        font-size: 2vw !important;
         padding: 1% 0 1% 1vh !important;
     }
     .outgoing-chats-msg{
         margin-left: 2vh !important;
     }
     .outgoing-chats-img img{
+        max-width: 100% !important;
+        max-height: 100% !important;
         width: 2.50vh !important;
         height: 2.50vh !important;
     }
     .msg-bottom{
-        height: 7vw !important;
         padding-right: 1vh !important;
     }
     .form-control-div{
         border-radius: 1.25vw !important;
-        height: 5vw !important;
     }
     .form-control{
         border-radius: 1.25vw !important;
-        font-size: 2.25vw !important;
+        font-size: 4.25vw !important;
         padding: 0% 0% 0% 1.5vw !important;
     }
     .input-group-text{
-        font-size: 3vw !important;
+        font-size: 5vw !important;
         padding: 0px 1.5vw 0px 0px !important;
     }
 }
@@ -90,7 +85,7 @@ img{
 }
 .msg-header{
     width: 100%;
-    height: 10%;
+    height: 8.5%;
     border-bottom: none;
     background-color: #660000;
     display: flex;
@@ -98,9 +93,11 @@ img{
     border: 0.1vh solid #660000;
 }
 .msg-header-img{
+    max-width: calc(100% - 0.1vw * 16 / 9);
+    max-height: calc(100% - 0.1vw) !important;
     border-radius: 50%;
-    max-width: 9vh;
-    max-height: 9vh;
+    height: 8vh;
+    width: 8vh;
     display: flex;
     margin-left: 0.5vw;
     margin-right: 1vw;
@@ -110,16 +107,19 @@ img{
     max-height: 100%;
 }
 .active h4{
+    max-height: calc(100% - 0.1vw * 0.9 * 16 / 9) !important;
     font-size: 5vh;
     font-weight: bold;
     margin-bottom: 0;
     color: #ffffff;
 }
 .active h6{
+    max-height: calc(100% - 0.1vw * 0.1 * 16 / 9) !important;
     font-size: 2.5vh;
     font-weight: bold;
     margin-left: 0.5vw;
-    margin-top: 1vh;
+    margin-top: 0;
+    margin-bottom: 0;
     line-height: 0.125rem;
     color: #ffffff;
     white-space: pre-wrap;
@@ -162,13 +162,13 @@ img{
     background: #800000 none repeat scroll 0 0;
     border-radius: 0.625rem;
     color: #ffffff;
-    font-size: 2vh;
+    font-size: 16px;
     padding: 1% 0 1% 1vw;
     margin: 0;
 }
 .time{
     color: #777777;
-    font-size: 1.75vh;
+    font-size: 12px;
     padding: 0 0 0 1.5vw;
 }
 .outgoing-chats{
@@ -182,7 +182,7 @@ img{
     background: #660000 none repeat scroll 0 0;
     color: #ffffff;
     border-radius: 0.625rem;
-    font-size: 2vh;
+    font-size: 16px;
     padding: 1% 0 1% 1vw;
     margin: 0;
 }
@@ -195,7 +195,7 @@ img{
     height: 2.50vw;
 }
 .msg-bottom{
-    height: 7vh;
+    height: 8.5%;
     background-color: #660000;
     display: flex;
     flex-direction: row-reverse;
@@ -208,7 +208,7 @@ img{
     border-radius: 1.25vh;
     min-width: 40% !important;
     background-color: #ffffff;
-    height: 5vh;
+    height: 80%;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
